Disable shutdown hook for logs by default, because it slows shutdown of app. Enabled for container.