@@ -2,6 +2,7 @@
 shopt -s nullglob
 
 JAVA_OPTS="-javaagent:${RIDE_INSTALL_PATH}/kanela-agent/kanela-agent-1.0.17.jar
+  --add-opens=java.base/java.lang=ALL-UNNAMED
   -XX:+ExitOnOutOfMemoryError
   -XX:+HeapDumpOnOutOfMemoryError
   -XX:HeapDumpPath=${RDATA}/heap-dumps
@@ -13,6 +14,7 @@ JAVA_OPTS="-javaagent:${RIDE_INSTALL_PATH}/kanela-agent/kanela-agent-1.0.17.jar
   -Dfile.encoding=UTF-8
   -Dlogback.configurationFile=${RIDE_LOGBACK_CONFIG}
   -Dlogback.stdout.level=${RIDE_LOG_LEVEL}
+  -Dlogback.shutdown-hook-delay=2000
   -Dconfig.override_with_env_vars=true
   -Dwaves.defaults.blockchain.type=$RIDE_NETWORK
   -Dwaves.defaults.directory=$RDATA
